Bug 352459 - "Alternatives" selection popup doesn't keep autohide-panel visible
Summary: "Alternatives" selection popup doesn't keep autohide-panel visible
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-09 05:45 UTC by Elias Probst
Modified: 2017-07-12 13:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2015-09-09 05:45:15 UTC
When a panel is set to "autohide" and the "Alternatives" selection popup is active on one of the panel's applets, the panel isn't "pinned" to stay always visible.

How to reproduce:
- Set a panel to autohide
- add an applet which offers alternatives (e.g. "Application Launcher")
- rightclick on this applet and select "Alternatives"
- move the mouse now from the "Alternatives" popup to the panel and back

What happens:
- Once the mouse leaves the panel again, the panel disappears, leaving the popup alone on the screen without its original context

What should happen:
- As long as the popup is visible, the panel should never autohide at all

Running KF5/P5 from git + Qt 5.5.0
Comment 1 David Edmundson 2017-07-12 13:50:58 UTC
Git commit 2d8b4e1dec26c5976dd75c238c3ae8a4700b8dd9 by David Edmundson.
Committed on 12/07/2017 at 13:50.
Pushed by davidedmundson into branch 'master'.

Don't autohide panel if a child window is open

Summary:
This is meant as a more generic fix for the autohide panels, actually
looking to see what transient windows we have open.

The problem with the current fixes (D6555) being posted is that we
potentially get attentionStatus in a corrupt status as we cache the
value but it might change externally whilst that window is open.

Also saves duplicating code in a bunch of places.

Test Plan:
Set autohide
Opened a context menu in task manager didn't autohide, till I closed it
Closing menu whilst keeping mouse in the panel doesn't auto hide it
until we move out after.
Hovering over TM tooltip keeps autohide from closing (another fix)
Related: bug 347855, bug 351823

Reviewers: #plasma, broulik

Reviewed By: #plasma, broulik

Subscribers: broulik, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D6577

M  +10   -0    shell/panelview.cpp
M  +1    -0    shell/panelview.h

https://commits.kde.org/plasma-workspace/2d8b4e1dec26c5976dd75c238c3ae8a4700b8dd9