Don't autohide panel if a child window is open

Summary:
This is meant as a more generic fix for the autohide panels, actually
looking to see what transient windows we have open.

The problem with the current fixes (D6555) being posted is that we
potentially get attentionStatus in a corrupt status as we cache the
value but it might change externally whilst that window is open.

Also saves duplicating code in a bunch of places.

Test Plan:
Set autohide
Opened a context menu in task manager didn't autohide, till I closed it
Closing menu whilst keeping mouse in the panel doesn't auto hide it
until we move out after.
Hovering over TM tooltip keeps autohide from closing (another fix)

BUG: 352459
BUG: 347855
BUG: 351823

Reviewers: #plasma, broulik

Reviewed By: #plasma, broulik

Subscribers: broulik, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D6577